Debut layout accueil

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,11 +4,34 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
-    <TextView
+    <Button
+        android:id="@+id/button_localise_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="122dp"
+        android:text="@string/text_find_button" />
+
+    <Button
+        android:id="@+id/button_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/button_localise_me"
+        android:layout_marginTop="30dp"
+        android:text="@string/text_button_list" />
+
+    <Button
+        android:id="@+id/button_preferences"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/button_list"
+        android:layout_marginTop="26dp"
+        android:text="@string/text_button_preferences" />
 
 </RelativeLayout>
