Some improvement on layouts

--- a/res/layout/list_item_display.xml
+++ b/res/layout/list_item_display.xml
@@ -13,25 +13,24 @@
         android:layout_gravity="center_vertical"
 	   	android:padding="10dp"/>
 
+    <TextView
+        android:id="@+id/list_item_parking_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical" />
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:gravity="center_horizontal" >
-
-        <TextView
-            android:id="@+id/list_item_parking_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|center_vertical"
-            android:layout_weight="1" />
+        android:gravity="right"
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/list_item_avaibleplaces"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|center_vertical"
-            android:layout_weight="1" />
+            android:layout_gravity="center_vertical" />
 
     </LinearLayout>
 
