--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
         android:id="@+id/button_localise_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="122dp"
         android:text="@string/text_find_button" />
@@ -18,8 +18,8 @@
         android:id="@+id/button_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/button_localise_me"
         android:layout_marginTop="30dp"
         android:text="@string/text_button_list" />
@@ -28,8 +28,8 @@
         android:id="@+id/button_preferences"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/button_list"
         android:layout_marginTop="26dp"
         android:text="@string/text_button_preferences" />
