--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -23,6 +23,16 @@
         android:layout_below="@+id/button_localise_me"
         android:layout_marginTop="30dp"
         android:text="@string/text_button_list" />
+    
+    <Button
+        android:id="@+id/button_database"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button_list"
+        android:layout_marginTop="30dp"
+        android:text="@string/text_button_database" />
 
     <Button
         android:id="@+id/button_preferences"
@@ -30,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button_list"
+        android:layout_below="@+id/button_database"
         android:layout_marginTop="26dp"
         android:text="@string/text_button_preferences" />
 
