--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -10,6 +10,6 @@
         android:id="@+id/listviewperso"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-      />
+        android:visibility="gone" />
  
 </LinearLayout>
