Adding missing days for recurrence spinner

--- a/res/values/spinner_recurrence_array.xml
+++ b/res/values/spinner_recurrence_array.xml
@@ -5,5 +5,9 @@
 	    <item>Lundi</item>
 	    <item>Mardi</item>
 	    <item>Mercredi</item>
+	    <item>Jeudi</item>
+	    <item>Vendredi</item>
+	    <item>Samedi</item>
+	    <item>Dimanche</item>
     </string-array>
 </resources>
