--- a/res/layout/new_list_item_display.xml
+++ b/res/layout/new_list_item_display.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textView_detailed_parking_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/text_programmed_alarms" />
