--- a/res/layout/activity_parking_alarm.xml
+++ b/res/layout/activity_parking_alarm.xml
@@ -52,41 +52,55 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layout_recurrence"
+    <CheckBox
+        android:id="@+id/checkBox_isRecurrent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/text_view_recurrence"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="@string/text_recurrence"/>
-
-        <Spinner
-            android:id="@+id/spinner_recurrence"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:text="@string/text_detailed_isreccurent" />
 
     <LinearLayout
-        android:id="@+id/layout_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:id="@+id/layout_recurrence_panel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/text_view_time"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="@string/text_time" />
-
-        <TimePicker
-            android:id="@+id/timePicker"
+        <LinearLayout
+            android:id="@+id/layout_recurrence"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="gone" >
+
+            <TextView
+                android:id="@+id/text_view_recurrence"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="@string/text_recurrence" />
+
+            <Spinner
+                android:id="@+id/spinner_recurrence"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/text_view_time"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="@string/text_time" />
+
+            <TimePicker
+                android:id="@+id/timePicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
     </LinearLayout>
 
