--- a/res/layout/activity_parking_alarm.xml
+++ b/res/layout/activity_parking_alarm.xml
@@ -2,55 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="10dp"
     android:contentDescription="@string/content_description_logo_map"
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView_detailed_parking_name"
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical|center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/content_description_logo_map"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/textView_detailed_navigate"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="@string/text_navigate_to" />
-
-        <ImageButton
-            android:id="@+id/imageButton1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/content_description_logo_map"
-            android:src="@android:drawable/ic_dialog_map" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/text_detailed_alarms" />
-
-        <TextView
-            android:id="@+id/textView_detailed_alarm_count"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end" />
-
-    </LinearLayout>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/text_alarm_infos" />
 
     <CheckBox
         android:id="@+id/checkBox_isRecurrent"
@@ -101,7 +64,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-
     </LinearLayout>
 
     <Button
