--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-
-    >
+    android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/layout_internet_unavailable"
@@ -18,11 +16,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.1"
+            android:gravity="center_vertical|center_horizontal"
+            android:paddingBottom="10dp"
             android:paddingLeft="3dp"
             android:paddingRight="3dp"
             android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:gravity="center_vertical|center_horizontal"
             android:text="@string/text_internet_unavailable" />
 
         <ImageView
@@ -32,13 +30,12 @@
             android:layout_weight="1"
             android:contentDescription="@string/content_description_delete"
             android:src="@android:drawable/ic_delete" />
-
     </LinearLayout>
- 
+
     <ListView
         android:id="@+id/listviewperso"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:visibility="gone" />
- 
+
 </LinearLayout>
