--- a/res/layout/activity_parking_alarm.xml
+++ b/res/layout/activity_parking_alarm.xml
@@ -23,7 +23,7 @@
 
     <LinearLayout
         android:id="@+id/layout_recurrence_panel"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
@@ -31,6 +31,7 @@
             android:id="@+id/layout_recurrence"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:visibility="gone" >
 
             <TextView
@@ -50,7 +51,8 @@
         <LinearLayout
             android:id="@+id/layout_time"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" >
 
             <TextView
                 android:id="@+id/text_view_time"
