--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/swipe">
+
+<LinearLayout 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+<!-- xmlns:android="http://schemas.android.com/apk/res/android" -->
     <LinearLayout
         android:id="@+id/layout_internet_unavailable"
         android:layout_width="match_parent"
@@ -39,3 +45,4 @@
         android:visibility="gone" />
 
 </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
